--- a/css/common.css
+++ b/css/common.css
@@ -132,6 +132,18 @@ html, body {
   color: white;
 }
 
+.btn-d-green {
+  background-color: #275e01;
+  border-color: #275e01;
+  color: white;
+  font-weight: bold;
+}
+.btn-d-green:hover {
+  background-color: #2e6e00;
+  border-color: #2e6e00;
+  color: white;
+}
+
 .btn-sleek-blue {
   background-color: #1f4e79;
   border-color: #1f4e79;
@@ -140,6 +152,17 @@ html, body {
 .btn-sleek-blue:hover {
   background-color: #1a466e;
   border-color: #1a466e;
+  color: white;
+}
+
+.btn-blue {
+  background-color: #000373;
+  border-color: #000373;
+  color: white;
+}
+.btn-blue:hover {
+  background-color: #000256;
+  border-color: #000256;
   color: white;
 }
 
