--- a/css/index.scss
+++ b/css/index.scss
@@ -68,7 +68,7 @@
         .coco {
             height: 100vh;
             //background: rgb(0 181 255 / 40%) url("../resources/images/backgrounds/compress/beach-coco_vectorized.png") no-repeat fixed;
-            background: transparent url("../resources/images/backgrounds/beach-coco.png") no-repeat fixed;
+            background: transparent url("../resources/images/backgrounds/beach-coco.png") no-repeat fixed !important;
             background-size: cover;
         }
         .container {
