--- a/css/index.css
+++ b/css/index.css
@@ -60,7 +60,10 @@
 }
 .banner-container .banner .coco {
   height: 100vh;
-  background: transparent url("../resources/images/backgrounds/beach-coco.png") no-repeat fixed !important;
+  background-repeat: no-repeat;
+  background-image: url("../resources/images/backgrounds/beach-coco.png") !important;
+  background-color: transparent;
+  background-attachment: fixed;
   background-size: cover;
 }
 .banner-container .banner .container {
